# rag-ai-wrapper

./: .env.example  .gitignore  Makefile  README.md  STEP_BY_STEP_PLAN.md  TOOLS_OVERVIEW.md  package.json  pnpm-lock.yaml  project-structure.md  pyproject.toml  tasks.py
.cursor/: .cursorrules
.cursor/rules/: fastapi-async.mdc  python-rag.mdc  vector-ops.mdc
back/: .env.example  .prettierrc  CLAUDE.md  package.json  pnpm-lock.yaml  tsconfig.json
back/src/: index.ts
back/src/interfaces/: services.interfaces.ts
back/src/routes/: ask.ts  chunk.ts  upload.ts
back/src/services/: Embeddings.service.ts  Embeddings.ts  FileProcessor.service.ts  FileProcessor.ts  RagService.service.ts  RagService.ts  TextChunker.service.ts  TextChunker.ts  VectorStore.service.ts  VectorStore.ts
back/src/types/: index.ts  pdf-parse.d.ts
back_ts/: package.json  pnpm-lock.yaml  qdrant.sh  test.txt  tsconfig.json
back_ts/doc/: feedback.md
back_ts/src/: container.ts  index.ts
back_ts/src/interfaces/: services.interfaces.ts
back_ts/src/routes/: ask.ts
back_ts/src/services/: Embeddings.service.ts  RagService.service.ts  VectorStore.service.ts
back_ts/src/types/: index.ts  pdf-parse.d.ts
src/api/: main.py
